@@ -60,9 +60,11 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.BooleanUtils;
+import org.apache.commons.validator.routines.EmailValidator;
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -78,6 +80,7 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
@@ -101,8 +104,14 @@ public class UserService {
     private final EmailNotificationService emailNotificationService;
     private final UserLookupProviderManager userLookupProviderManager;
 
+    /**
+     * A flag to indicate if the user should be deleted in the provider when deleting it in the portal
+     */
+    @Value("${hello-data.auth-server.delete-user-in-provider:false}")
+    private boolean deleteUsersInProvider;
+
     @Transactional
-    public String createUser(String email, String firstName, String lastName) {
+    public String createUser(String email, String firstName, String lastName, AdUserOrigin origin) {
         email = email.toLowerCase(Locale.ROOT);
         log.info("Creating user. Email: {}, first name: {}, last name {}", email, firstName, lastName);
         validateEmailAlreadyExists(email);
@@ -130,6 +139,7 @@ public class UserService {
         userEntity.setLastName(userFoundInKeycloak == null ? lastName : userFoundInKeycloak.getLastName());
         userEntity.setEnabled(true);
         userEntity.setSuperuser(false);
+        userEntity.setFederated(origin != AdUserOrigin.LOCAL);
         userRepository.saveAndFlush(userEntity);
         roleService.setBusinessDomainRoleForUser(userEntity, HdRoleName.NONE);
         roleService.setAllDataDomainRolesForUser(userEntity, HdRoleName.NONE);
@@ -214,9 +224,16 @@ public class UserService {
         }
         UserResource userResource = getUserResource(userId);
         Optional<UserEntity> userEntityResult = Optional.of(getUserEntity(dbId));
-        userEntityResult.ifPresentOrElse(userRepository::delete, () -> {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User with specified id not found");//NOSONAR
-        });
+        AtomicBoolean isUserFederated = new AtomicBoolean(false);
+        userEntityResult.ifPresentOrElse(
+                (userEntity) -> {
+                    isUserFederated.set(userEntity.isFederated());
+                    userRepository.delete(userEntity);
+                },
+                () -> {
+                    throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User with specified id not found");//NOSONAR
+                }
+        );
         if (userResource == null) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User with specified id not found in keycloak");//NOSONAR
         }
@@ -224,7 +241,9 @@ public class UserService {
         UserRepresentation userRepresentation = userResource.toRepresentation();
         subsystemUserDelete.setEmail(userRepresentation.getEmail().toLowerCase(Locale.ROOT));
         subsystemUserDelete.setUsername(userRepresentation.getUsername());
-        userResource.remove();
+        if (deleteUsersInProvider && !isUserFederated.get()) {
+            userResource.remove();
+        }
         natsSenderService.publishMessageToJetStream(HDEvent.DELETE_USER, subsystemUserDelete);
     }
 
@@ -400,16 +419,25 @@ public class UserService {
         if (email == null || email.length() < 3) {
             return Collections.emptyList();
         }
-
-        List<String> usersAlreadyAdded = userRepository.findAllEmails();
         List<AdUserDto> users = userLookupProviderManager.searchUserByEmail(email);
-        Set<String> uniqueEmails = new HashSet<>();
+        Map<String, AdUserDto> emailToUserDto = users.stream().collect(Collectors.toMap(AdUserDto::getEmail, user -> user, (existing, replacement) -> {
+            if (existing.getOrigin() == AdUserOrigin.LOCAL && replacement.getOrigin() != AdUserOrigin.LOCAL) {
+                return replacement;
+            }
+            return existing;
+        }));
 
-        return users.stream()
-                .filter(Objects::nonNull)
-                .filter(user -> uniqueEmails.add(user.getEmail()))
-                .filter(user -> !usersAlreadyAdded.contains(user.getEmail()))
-                .collect(Collectors.toList());
+        List<String> usersAlreadyAdded = userRepository.findAllEmails().stream().map(eMail -> eMail.toLowerCase(Locale.ROOT)).toList();
+        Set<String> uniqueEmails = new HashSet<>();
+        List<AdUserDto> uniqueUsers = new ArrayList<>();
+        for (Map.Entry<String, AdUserDto> entry : emailToUserDto.entrySet()) {
+            String emailKey = entry.getKey().toLowerCase(Locale.ROOT);
+            AdUserDto user = entry.getValue();
+            if (uniqueEmails.add(emailKey) && !usersAlreadyAdded.contains(emailKey) && isValidEmail(user.getEmail())) {
+                uniqueUsers.add(user);
+            }
+        }
+        return uniqueUsers;
     }
 
     @Transactional(readOnly = true)
@@ -446,6 +474,10 @@ public class UserService {
     @Transactional(readOnly = true)
     public Locale getSelectedLanguageByEmail(String email) {
         return userRepository.findSelectedLanguageByEmail(email);
+    }
+
+    private boolean isValidEmail(String email) {
+        return EmailValidator.getInstance().isValid(email);
     }
 
     /**
@@ -654,6 +686,7 @@ public class UserService {
             userDto.setInvitationsCount(userEntity.getInvitationsCount());
             userDto.setFirstName(userEntity.getFirstName());
             userDto.setLastName(userEntity.getLastName());
+            userDto.setFederated(userEntity.isFederated());
             if (userEntity.getLastAccess() != null) {
                 ZonedDateTime zdt = ZonedDateTime.of(userEntity.getLastAccess(), ZoneId.systemDefault());
                 userDto.setLastAccess(zdt.toInstant().toEpochMilli());
